# chip-8-emulator

./: .gitignore  CMakeLists.txt  README.md
documentation/: DEVELOPMENT_LOG.md  LESSONS_LEARNED.md
source code/: chip8  chip8.cpp  chip8.h  main.cpp
